--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,13 +6,13 @@
             <h2 >login</h2>
             <h5 style="margin-bottom: 40px;">{{aim}}</h5>
             <label>Username</label>
-            <input type="text" name="" id="username" class="form-control" [value]="username" (change)="accChange($event)" placeholder="Enter username"><br>
+            <input type="text" name="" id="username" class="form-control" [value]="username" #acno  placeholder="Enter username"><br>
             <label>Password</label>
-            <input type="text" name="" id="password" class="form-control" (change)="pswdChange($event)" placeholder=" Enter password"><br>
+            <input type="text" name="" id="password" class="form-control" [value]="password" #pswd  placeholder=" Enter password"><br>
 
             <button class="btn btn-primary"
                 style="padding-right: 115px;padding-left: 115px;margin-top: 10%; margin-left:12% ;"
-                (click)="logIn()">Log in</button>
+                (click)="logIn(acno,pswd)">Log in</button>
         </div>
         <div class="col-lg-8 col-md-6 col-12 box">
 
